# physicscourt

./: .gitignore  ACKNOWLEDGMENTS.md  LICENSE  Makefile  README.md  RESULTS.md  pyproject.toml  requirements.txt
config/: eval.yaml  models.yaml  physics_config.yaml
data/edited_real/: README.md
docs/: gcp_l4_reproduce.md
results/: calibration_report.json  detector_b_calibration_report.json  environment_report.json  phase4_edited_real_l4_fp32_report.json  phase4_edited_real_report.json  phase4_l4_fp32_dino_timing.json  phase4_l4_fp32_li_cotracker_timing.json  phase4_l4_fp32_li_depth_timing.json  phase4_l4_fp32_li_sam2_timing.json  phase4_l4_fp32_li_state_rules_timing.json  phase4_l4_fp32_vjepa2_timing.json  vjepa21_linear_probe_l4_fp32_report.json  vjepa21_mlp_probe_l4_fp32_report.json  vjepa21_probe_embeddings_l4_fp32_timing.json
scripts/: ablate_detector_b.py  cache_detector_a.py  cache_vjepa21_probe_embeddings.py  clean_cache.py  compare_detectors.py  download_weights.py  evaluate_detector_a.py  evaluate_detector_b.py  evaluate_phase4_edited_real.py  generate_synthetic.py  inspect_vjepa21_shapes.py  make_phase4_social_reel.py  motion_correlation_audit.py  probe_vjepa_embeddings.py  recompute_vjepa_reductions.py  rewrite_manifest_paths.py  run_all.py  run_detector_a.py  run_detector_b.py  run_vjepa2_fairness_job.py  smoke_models.py  start_detector_a_cache_job.py  start_vjepa2_fairness_live_job.py  statistical_audit.py  visual_audit.py  vjepa2_fairness_sweep.py
tests/: test_phase0_imports.py  test_score_utils.py  test_synthetic_generator.py
(+41 files in other folders)
